Fix flex alignment on portfolio

--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -56,7 +56,7 @@ a
 .section
 {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
     width: 25%;
     padding: 0.5rem;
     background-color: var(--col-background);
